fix(plan): wire plan mode and discord input UI

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1"
 base64 = "0.22"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tracing = "0.1"
 tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "time", "net", "sync"] }
 uuid = { version = "1", features = ["v4"] }
 tempfile = "3"
