--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,3 +36,4 @@ tracing-appender = "0.2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-global-shortcut = "2"
+tauri-plugin-updater = "2"
