feat(ui): add AI code review dropdown in chat log
Add a dropdown button next to the log switcher that lets users select
an agent to review the current branch's diffs. When selected, it gathers
git context (branch info, diff, commit history) and creates a new task
with a pre-built code review prompt.

- Add gather_code_review_context Tauri command to collect git diff,
  commit log, and branch info with 100KB truncation for large diffs
- Add Code Review dropdown HTML/CSS reusing log-switcher styles
- Add JS event handlers, menu population, and prompt builder
- Add mock handler in tauri-bridge for browser dev mode

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,3 +12,4 @@ tracing = "0.1"
 tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "time", "net", "sync"] }
 uuid = { version = "1", features = ["v4"] }
 tempfile = "3"
+chrono = "0.4"
