--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,6 +10,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tracing = "0.1"
 tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "time", "net", "sync"] }
+tokio-util = "0.7"
 uuid = { version = "1", features = ["v4"] }
 tempfile = "3"
 chrono = "0.4"
