feat(container): add local build isolation and conflict fix flow

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,3 +13,4 @@ tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-t
 uuid = { version = "1", features = ["v4"] }
 tempfile = "3"
 chrono = "0.4"
+which = "5"
