--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ dirs = "5"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 chrono = "0.4"
 uuid = { version = "1", features = ["v4"] }
+portable-pty = "0.8"
 rusqlite = { version = "0.31", features = ["bundled"] }
 urlencoding = "2.1"
 base64 = "0.22"
