--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,6 +86,15 @@ jobs:
           name: phantom-macos-app
           path: src-tauri/target/release/bundle/macos/*.app
 
+      - name: Upload updater artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: phantom-macos-updater
+          path: |
+            src-tauri/target/release/bundle/macos/*.tar.gz
+            src-tauri/target/release/bundle/macos/*.tar.gz.sig
+            src-tauri/target/release/bundle/macos/latest.json
+
   release:
     needs: build-macos
     runs-on: ubuntu-latest
@@ -99,9 +108,15 @@ jobs:
           name: phantom-macos-dmg
           path: ./release
 
+      - name: Download updater artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: phantom-macos-updater
+          path: ./release
+
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: ./release/*.dmg
+          files: ./release/*
           draft: true
           generate_release_notes: true
