chore: bump version to 1.0.3-alpha4
Fix DMG background by setting CI=false in build step
This prevents create-dmg from using --skip-jenkins flag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,6 +58,7 @@ jobs:
 
       - name: Build Tauri app
         env:
+          CI: false  # Required for DMG background/icon positioning to work
           APPLE_SIGNING_IDENTITY: ${{ secrets.APPLE_SIGNING_IDENTITY }}
           APPLE_API_ISSUER: ${{ secrets.APPLE_API_ISSUER }}
           APPLE_API_KEY: ${{ secrets.APPLE_API_KEY }}
