--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "phantom_harness"
-version = "1.0.3-alpha4"
+version = "1.0.3"
 description = "Phantom Harness Tauri app"
 edition = "2021"
 
