--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ url = "2"
 dirs = "5"
 reqwest = { version = "0.11", features = ["json", "blocking", "multipart", "stream"] }
 chrono = "0.4"
+croner = "3"
 uuid = { version = "1", features = ["v4"] }
 portable-pty = "0.8"
 hyper = { version = "0.14", features = ["full"] }
