--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ dist/
 docs/*
 !docs/screenshots/
 !docs/mcp.md
+!docs/plans/
+!docs/plans/**
 spec.md
 
 # GitHub workflows (not needed for open source)
