--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,9 @@ dist/
 docs/*
 !docs/screenshots/
 !docs/mcp.md
+!docs/plans/
+docs/plans/*
+!docs/plans/2026-02-07-feat-text-notes.md
 spec.md
 
 # GitHub workflows (not needed for open source)
