--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ docs/*
 !docs/plans/
 docs/plans/*
 !docs/plans/2026-02-07-feat-text-notes.md
+!docs/plans/claude-teammate-controller.md
 spec.md
 
 # GitHub workflows (not needed for open source)
