--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ docs/*
 !docs/plans/
 docs/plans/*
 !docs/plans/2026-02-07-feat-text-notes.md
+!docs/plans/claude-teammate-controller.md
 !docs/plans/2026-02-09-feat-branch-selector-open-prs.md
 spec.md
 
