feat: Claude Code WebSocket protocol (Companion-style streaming + tool approval)
Integrate the reverse-engineered Claude Code --sdk-url WebSocket protocol
into Phantom's Rust backend, enabling:

- WebSocket server (tokio-tungstenite) for Claude Code CLI connections
- NDJSON protocol handler for all message types
- Browser-side WebSocket bridge for real-time streaming
- Tool call permission approval/deny flow
- Per-agent config to enable/disable WebSocket mode
- Fallback to existing stdout-parsing when WS disabled

New files:
- backend/src/ws_bridge.rs — WebSocket server + NDJSON protocol
- backend/src/ws_types.rs — Rust types for protocol messages
- gui/js/ws-chat.js — Browser WebSocket client

Modified:
- backend/src/cli.rs — WebSocket launch path for Claude
- backend/src/lib.rs — Register new modules
- backend/config/agents.toml — ws_mode config option
- src-tauri/src/main.rs — New Tauri commands for WS
- gui/agent_chat_log.html — Include ws-chat.js

Based on protocol spec from The-Vibe-Company/companion

--- a/backend/config/agents.toml
+++ b/backend/config/agents.toml
@@ -12,8 +12,10 @@ prompt_path = "backend/prompts/namegen.md"
 id = "claude-code"
 display_name = "Claude Code"
 command = "claude"
-# YOLO: bypass permission prompts in CLI
-args = ["--output-format", "stream-json", "--permission-mode", "bypassPermissions"]
+# Use the hidden Companion-style WebSocket SDK protocol (`--sdk-url`) when available.
+# This enables real-time streaming + interactive tool approval.
+use_websocket = true
+args = ["--output-format", "stream-json"]
 # Claude Code supports OAuth/subscription login (via `claude setup-token`), so an API key
 # is not strictly required for local usage.
 required_env = []
