--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,3 +14,5 @@ tokio-util = "0.7"
 uuid = { version = "1", features = ["v4"] }
 tempfile = "3"
 chrono = "0.4"
+futures-util = "0.3"
+tokio-tungstenite = "0.28.0"
